Fix bug on mobile view of newsfeed

--- a/css/style.scss
+++ b/css/style.scss
@@ -323,7 +323,7 @@ input[type='radio'] {
     width: 60vw;
   
     &.toggled {
-      top: -18rem;
+      top: -50vh;
     }
   }
 }
